--- a/css/inicio.css
+++ b/css/inicio.css
@@ -1,5 +1,22 @@
+@font-face {
+    font-family: copper_bit;
+    src: url(../fonts/Cooper\ Black\ Regular.ttf);
+}
+
+body {
+    overflow-x: hidden;
+}
+
+.navbar,
+.collapse {
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    justify-content: space-between;
+}
+
 .fondo {
-    background: url(fondo.webp);
+    background: url(/img/Fondo_web.jpg);
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
@@ -12,12 +29,55 @@
     object-fit: cover;
 }
 
-.carousel {
-    width: 900px;
-    height: 500px;
+.fa-solid {
+    position: relative;
 }
 
+.carousel-item img {
+    height: 50vh;
+    object-fit: cover;
+    object-position: center;
+}
 
-/* .navbar {
-        background-color: ;
-} */
+#navbarNavDropdown {
+    transform: translate(50px, 20px);
+}
+
+.promo_banner {
+    background: rgb(213, 213, 211);
+    background: linear-gradient(252deg, rgba(213, 213, 211, 1) 0%, rgba(131, 131, 131, 1) 11%, rgba(133, 133, 133, 1) 87%, rgba(208, 208, 208, 1) 100%);
+    /* background: rgb(210, 152, 3);
+    background: linear-gradient(252deg, rgba(210, 152, 3, 1) 0%, rgba(255, 179, 0, 1) 11%, rgba(255, 0, 0, 1) 87%, rgba(233, 224, 33, 1) 100%); */
+    /* background: rgb(255, 248, 0);
+    background: linear-gradient(252deg, rgba(255, 248, 0, 1) 0%, rgba(255, 131, 23, 1) 26%, rgba(210, 152, 3, 1) 75%, rgba(255, 248, 0, 1) 100%); */
+}
+
+.promo_banner p {
+    font-size: 1.2rem;
+    font-family: copper_bit;
+    font-weight: bold;
+}
+
+.code_promo {
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+.code_promo2 {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.nav-item {
+    margin-right: 200px;
+}
+
+.hvr-underline-from-center {
+    background-color: #225dba;
+}
+
+@media (max-width:800px) {
+    #navbarNavDropdown {
+        transform: translate(50px, 20px);
+    }
+}
