--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,5 +1,6 @@
-* {
-    font-family: 'Dosis', sans-serif;
+@font-face {
+    font-family: copper_bit;
+    src: url(../fonts/Cooper\ Black\ Regular.ttf);
 }
 
 .nosotros{
@@ -17,4 +18,35 @@
 }
 .parrafo1{
     text-align: justify;
+}
+.navbar,
+.collapse {
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    justify-content: space-between;
+}
+.logo {
+    width: 120px;
+    height: 70px;
+    object-fit: cover;
+}
+.fa-solid {
+    position: relative;
+}
+#navbarNavDropdown {
+    transform: translate(50px, 20px);
+}
+.nav-item {
+    margin-right: 200px;
+}
+
+.hvr-underline-from-center {
+    background-color: #225dba;
+}
+
+@media (max-width:800px) {
+    #navbarNavDropdown {
+        transform: translate(50px, 20px);
+    }
 }
