--- a/css/habitaciones.css
+++ b/css/habitaciones.css
@@ -1,4 +1,5 @@
-* {
+
+*{
     
     font-family: 'Dosis', sans-serif;
 }
@@ -14,6 +15,10 @@
     display: flex;
     justify-content: end;
     align-items: center;
+}
+
+body {
+    overflow-x: hidden;
 }
 .navbar,
 .collapse {
