--- a/css/contactenos.css
+++ b/css/contactenos.css
@@ -1,4 +1,4 @@
-*{
+* {
     font-weight: bold;
     font-family: 'Dosis', sans-serif;
 }
@@ -12,16 +12,17 @@
 }
 
 .formulario {
-padding-top: 40px;
+    padding-top: 40px;
 }
 
-.btn{
+.btn {
     background-color: #73CBD8
 }
 
 body {
     overflow-x: hidden;
 }
+
 .navbar,
 .collapse {
     font-family: sans-serif;
@@ -29,23 +30,29 @@ body {
     font-size: 20px;
     justify-content: space-between;
 }
+
 .logo {
     width: 120px;
     height: 70px;
     object-fit: cover;
 }
+
 .fa-solid {
     position: relative;
+    top: 5px;
+    margin-right: 2px;
 }
+
 #navbarNavDropdown {
     transform: translate(50px, 20px);
 }
+
 .nav-item {
     margin-right: 200px;
 }
 
 .hvr-underline-from-center {
-    background-color: #225dba;
+    background-color: #0f4396;
 }
 
 @media (max-width:800px) {
