--- a/css/habitaciones.css
+++ b/css/habitaciones.css
@@ -1,17 +1,15 @@
-
-*{
-    
+* {
     font-family: 'Dosis', sans-serif;
 }
 
-.img_habitaciones{
+.img_habitaciones {
     width: 100%;
     height: 300px;
     object-fit: cover;
     object-position: center;
 }
 
-.reservar{
+.reservar {
     display: flex;
     justify-content: end;
     align-items: center;
@@ -20,6 +18,7 @@
 body {
     overflow-x: hidden;
 }
+
 .navbar,
 .collapse {
     font-family: sans-serif;
@@ -27,23 +26,29 @@ body {
     font-size: 20px;
     justify-content: space-between;
 }
+
 .logo {
     width: 120px;
     height: 70px;
     object-fit: cover;
 }
+
 .fa-solid {
     position: relative;
+    top: 5px;
+    margin-right: 2px;
 }
+
 #navbarNavDropdown {
     transform: translate(50px, 20px);
 }
+
 .nav-item {
     margin-right: 200px;
 }
 
 .hvr-underline-from-center {
-    background-color: #225dba;
+    background-color: #0f4396;
 }
 
 @media (max-width:800px) {
