--- a/css/inicio.css
+++ b/css/inicio.css
@@ -31,6 +31,8 @@ body {
 
 .fa-solid {
     position: relative;
+    top: 5px;
+    margin-right: 2px;
 }
 
 .carousel-item img {
@@ -44,12 +46,8 @@ body {
 }
 
 .promo_banner {
-    background: rgb(213, 213, 211);
-    background: linear-gradient(252deg, rgba(213, 213, 211, 1) 0%, rgba(131, 131, 131, 1) 11%, rgba(133, 133, 133, 1) 87%, rgba(208, 208, 208, 1) 100%);
-    /* background: rgb(210, 152, 3);
-    background: linear-gradient(252deg, rgba(210, 152, 3, 1) 0%, rgba(255, 179, 0, 1) 11%, rgba(255, 0, 0, 1) 87%, rgba(233, 224, 33, 1) 100%); */
-    /* background: rgb(255, 248, 0);
-    background: linear-gradient(252deg, rgba(255, 248, 0, 1) 0%, rgba(255, 131, 23, 1) 26%, rgba(210, 152, 3, 1) 75%, rgba(255, 248, 0, 1) 100%); */
+    background: rgb(34, 193, 195);
+    background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
 }
 
 .promo_banner p {
@@ -73,7 +71,7 @@ body {
 }
 
 .hvr-underline-from-center {
-    background-color: #225dba;
+    background-color: #0f4396;
 }
 
 @media (max-width:800px) {
